sag market and some other nasty shit