@@ -10,35 +10,26 @@ import java.text.DecimalFormat;
 import java.util.Hashtable;
 
 public class Peuckern {
-	private static String								fileSource			= "xml/bawu boundary.xml";
-	private static Hashtable<Integer, Double>		latitudes			= new Hashtable<Integer, Double>();
-	private static Hashtable<Integer, Double>		longitudes			= new Hashtable<Integer, Double>();
+	private static String								fileSource			= "xml/bawu lakes.xml";
+	private static Hashtable<Integer, Node>		nodes					= new Hashtable<Integer, Node>();
 	private static Hashtable<Integer, Boolean>	neededNodes			= new Hashtable<Integer, Boolean>();
-	private static Hashtable<Integer, Integer>	wayPoints			= new Hashtable<Integer, Integer>();
-	private static int									logint				= 0;
-	private static double								peuckerDistance	= 50.0;
+	// private static Hashtable<Integer, Integer> wayPoints = new Hashtable<Integer, Integer>();
+	private static double								peuckerDistance	= 0.05;
 	
 	public static void main(String[] args) throws IOException {
-		DecimalFormat format = new DecimalFormat("0.#");
+		Hashtable<Integer, Integer> wayPoints = new Hashtable<Integer, Integer>();
+		DecimalFormat format = new DecimalFormat("0.##");
 		String fileTarget = Peuckern.fileSource.replaceFirst(".xml", " p" + format.format(Peuckern.peuckerDistance) + ".xml");
 		BufferedReader reader = new BufferedReader(new FileReader(new File(Peuckern.fileSource)));
 		
 		// Save data of the nodes in Hashtables and check for needed nodes
 		String line = null;
-		int begin;
-		int end;
-		int l = 0;
 		while (reader.ready()) {
 			line = reader.readLine();
-			l++;
-			if (l > Peuckern.logint) {
-				System.out.println(l);
-				Peuckern.logint += 500;
-			}
 			if (line.indexOf("<node") >= 0) {
-				begin = line.indexOf("id=\"");
+				int begin = line.indexOf("id=\"");
 				if (begin >= 0) {
-					end = line.indexOf("\"", begin + 4);
+					int end = line.indexOf("\"", begin + 4);
 					Integer id = Integer.valueOf(line.substring(begin + 4, end));
 					begin = line.indexOf("lat=\"");
 					if (begin >= 0) {
@@ -48,46 +39,44 @@ public class Peuckern {
 						if (begin >= 0) {
 							end = line.indexOf("\"", begin + 5);
 							Double lon = Double.valueOf(line.substring(begin + 5, end));
-							Peuckern.latitudes.put(id, lat);
-							Peuckern.longitudes.put(id, lon);
+							Peuckern.nodes.put(id, new Node(lon, lat));
 						}
 					}
 				}
 				if (line.indexOf("/>") < 0) {
 					do {
 						line = reader.readLine();
-						l++;
 					} while (line.indexOf("</node") < 0);
 				}
 			} else {
 				if (line.indexOf("<way") >= 0) {
 					if (line.indexOf("/>") < 0) {
 						line = reader.readLine();
-						l++;
 						while (line.indexOf("</way") < 0) {
 							if (line.indexOf("<nd") >= 0) {
-								begin = line.indexOf("ref=\"");
+								String str = "ref=\"";
+								int begin = line.indexOf(str);
 								if (begin >= 0) {
-									end = line.indexOf("\"", begin + 5);
-									Peuckern.wayPoints.put(Integer.valueOf(line.substring(begin + 5, end)), 0);
+									int end = line.indexOf("\"", begin + str.length());
+									wayPoints.put(Integer.valueOf(line.substring(begin + str.length(), end)), new Integer(0));
 								}
 							}
 							line = reader.readLine();
-							l++;
 						}
-						if (Peuckern.wayPoints.size() > 0) {
-							Integer[] refs2 = new Integer[Peuckern.wayPoints.size()];
-							Integer[] refs = Peuckern.wayPoints.keySet().toArray(refs2);
+						if (wayPoints.size() > 0) {
+							Integer[] refs2 = new Integer[wayPoints.size()];
+							Integer[] refs = wayPoints.keySet().toArray(refs2);
 							refs2 = null;
 							Peuckern.markRelevantNodes(refs, 0, refs.length - 1);
 						}
+						wayPoints.clear();
 					}
 				}
 			}
 		}
 		reader.close();
-		Peuckern.latitudes.clear();
-		Peuckern.longitudes.clear();
+		Peuckern.nodes.clear();
+		System.out.println("Nodes: " + neededNodes.size());
 		
 		System.out.println("Step 1");
 		
@@ -99,10 +88,11 @@ public class Peuckern {
 		while (reader.ready()) {
 			line = reader.readLine();
 			if (line.indexOf("<node") >= 0) {
-				begin = line.indexOf("id=\"");
+				String str = "id=\"";
+				int begin = line.indexOf(str);
 				if (begin >= 0) {
-					end = line.indexOf("\"", begin + 4);
-					Integer id = Integer.valueOf(line.substring(begin + 4, end));
+					int end = line.indexOf("\"", begin + str.length());
+					Integer id = Integer.valueOf(line.substring(begin + str.length(), end));
 					if (Peuckern.neededNodes.containsKey(id)) {
 						writer.write(line + System.getProperty("line.separator", "\n"));
 					}
@@ -110,7 +100,6 @@ public class Peuckern {
 				if (line.indexOf("/>") < 0) {
 					do {
 						line = reader.readLine();
-						l++;
 					} while (line.indexOf("</node") < 0);
 				}
 			} else {
@@ -120,10 +109,11 @@ public class Peuckern {
 					do {
 						line = reader.readLine();
 						if (line.indexOf("<nd") >= 0) {
-							begin = line.indexOf("ref=\"");
+							String str = "ref=\"";
+							int begin = line.indexOf(str);
 							if (begin >= 0) {
-								end = line.indexOf("\"", begin + 5);
-								Integer ref = Integer.valueOf(line.substring(begin + 5, end));
+								int end = line.indexOf("\"", begin + str.length());
+								Integer ref = Integer.valueOf(line.substring(begin + str.length(), end));
 								if (Peuckern.neededNodes.containsKey(ref)) {
 									zeile += line + System.getProperty("line.separator", "\n");
 									ndcount++;
@@ -162,13 +152,15 @@ public class Peuckern {
 			default: {
 				Peuckern.neededNodes.put(refs[begin], new Boolean(true));
 				Peuckern.neededNodes.put(refs[end], new Boolean(true));
-				Line iLine = new Line(Peuckern.longitudes.get(refs[begin]), Peuckern.latitudes.get(refs[begin]),
-						Peuckern.longitudes.get(refs[end]), Peuckern.latitudes.get(refs[end]));
+				Node beginNode = Peuckern.nodes.get(refs[begin]);
+				Node endNode = Peuckern.nodes.get(refs[end]);
+				Line iLine = new Line(beginNode.lon, beginNode.lat, endNode.lon, endNode.lat);
 				int most_distant = -1;
 				double largest_distance = -1.0;
 				double distance;
 				for (int i = begin + 1; i < end - 1; i++) {
-					distance = iLine.getDistanceOfPoint(Peuckern.longitudes.get(refs[i]), Peuckern.latitudes.get(refs[i]));
+					Node node = Peuckern.nodes.get(refs[i]);
+					distance = iLine.getDistanceOfPoint(node.lon, node.lat);
 					if (largest_distance < distance) {
 						largest_distance = distance;
 						most_distant = i;
