@@ -10,8 +10,6 @@ import java.util.Hashtable;
 
 public class SimpliestPeuckern {
 	private static String								fileSource	= "xml/bawu boundary.xml";
-	private static Hashtable<Integer, Double>		latitudes	= new Hashtable<Integer, Double>();
-	private static Hashtable<Integer, Double>		longitudes	= new Hashtable<Integer, Double>();
 	private static Hashtable<Integer, Boolean>	neededNodes	= new Hashtable<Integer, Boolean>();
 	private static Hashtable<Integer, Integer>	wayPoints	= new Hashtable<Integer, Integer>();
 	
@@ -19,30 +17,11 @@ public class SimpliestPeuckern {
 		String fileTarget = SimpliestPeuckern.fileSource.replaceFirst(".xml", " ssp.xml");
 		BufferedReader reader = new BufferedReader(new FileReader(new File(SimpliestPeuckern.fileSource)));
 		
-		// Save data of the nodes in Hashtables and check for needed nodes
+		// Check for needed nodes in the ways
 		String line = null;
-		int begin;
-		int end;
 		while (reader.ready()) {
 			line = reader.readLine();
 			if (line.indexOf("<node") >= 0) {
-				begin = line.indexOf("id=\"");
-				if (begin >= 0) {
-					end = line.indexOf("\"", begin + 4);
-					Integer id = Integer.valueOf(line.substring(begin + 4, end));
-					begin = line.indexOf("lat=\"");
-					if (begin >= 0) {
-						end = line.indexOf("\"", begin + 5);
-						Double lat = Double.valueOf(line.substring(begin + 5, end));
-						begin = line.indexOf("lon=\"");
-						if (begin >= 0) {
-							end = line.indexOf("\"", begin + 5);
-							Double lon = Double.valueOf(line.substring(begin + 5, end));
-							SimpliestPeuckern.latitudes.put(id, lat);
-							SimpliestPeuckern.longitudes.put(id, lon);
-						}
-					}
-				}
 				if (line.indexOf("/>") < 0) {
 					do {
 						line = reader.readLine();
@@ -54,10 +33,11 @@ public class SimpliestPeuckern {
 						do {
 							line = reader.readLine();
 							if (line.indexOf("<nd") >= 0) {
-								begin = line.indexOf("ref=\"");
+								String str = "ref=\"";
+								int begin = line.indexOf(str);
 								if (begin >= 0) {
-									end = line.indexOf("\"", begin + 5);
-									SimpliestPeuckern.wayPoints.put(Integer.valueOf(line.substring(begin + 5, end)), 0);
+									int end = line.indexOf("\"", begin + str.length());
+									SimpliestPeuckern.wayPoints.put(Integer.valueOf(line.substring(begin + str.length(), end)), new Integer(0));
 								}
 							}
 						} while (line.indexOf("</way") < 0);
@@ -65,19 +45,17 @@ public class SimpliestPeuckern {
 							Integer[] refs2 = new Integer[SimpliestPeuckern.wayPoints.size()];
 							Integer[] refs = SimpliestPeuckern.wayPoints.keySet().toArray(refs2);
 							refs2 = null;
-							SimpliestPeuckern.wayPoints.clear();
 							SimpliestPeuckern.neededNodes.put(refs[0], new Boolean(true));
 							SimpliestPeuckern.neededNodes.put(refs[refs.length - 1], new Boolean(true));
 							refs = null;
 						}
+						SimpliestPeuckern.wayPoints.clear();
 					}
 				}
 			}
 		}
-		
 		reader.close();
-		SimpliestPeuckern.latitudes.clear();
-		SimpliestPeuckern.longitudes.clear();
+		System.out.println("Nodes: " + neededNodes.size());
 		
 		System.out.println("Step 1");
 		
@@ -89,10 +67,11 @@ public class SimpliestPeuckern {
 		while (reader.ready()) {
 			line = reader.readLine();
 			if (line.indexOf("<node") >= 0) {
-				begin = line.indexOf("id=\"");
+				String str = "id=\"";
+				int begin = line.indexOf(str);
 				if (begin >= 0) {
-					end = line.indexOf("\"", begin + 4);
-					Integer id = Integer.valueOf(line.substring(begin + 4, end));
+					int end = line.indexOf("\"", begin + str.length());
+					Integer id = Integer.valueOf(line.substring(begin + str.length(), end));
 					if (SimpliestPeuckern.neededNodes.containsKey(id)) {
 						writer.write(line + System.getProperty("line.separator", "\n"));
 					}
@@ -109,10 +88,11 @@ public class SimpliestPeuckern {
 					do {
 						line = reader.readLine();
 						if (line.indexOf("<nd") >= 0) {
-							begin = line.indexOf("ref=\"");
+							String str = "ref=\"";
+							int begin = line.indexOf(str);
 							if (begin >= 0) {
-								end = line.indexOf("\"", begin + 5);
-								Integer ref = Integer.valueOf(line.substring(begin + 5, end));
+								int end = line.indexOf("\"", begin + str.length());
+								Integer ref = Integer.valueOf(line.substring(begin + str.length(), end));
 								if (SimpliestPeuckern.neededNodes.containsKey(ref)) {
 									zeile += line + System.getProperty("line.separator", "\n");
 									ndcount++;
